# jni-kcp

./: .gitmodules  build.gradle.kts  settings.gradle.kts
native/: CMakeLists.txt  bot_inker_kcp_KcpC.cpp  build.gradle.kts
src/main/java/bot/inker/kcp/: IKcpcb.java  IKcpcbLog.java  IKcpcbOutput.java  KcpC.java  NativeType.java
src/test/java/bot/inker/kcp/: IKcpcbTest.java
